<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.LoginFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        >



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hamkor"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_you_ve_been_missed"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#747C88"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        tools:ignore="HardcodedText,SpUsage" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:inputType="text"
        android:hint="@string/type_your_username"
        android:padding="15dp"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:background="@drawable/custom_edittext"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        tools:ignore="HardcodedText,SpUsage" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:endIconMode="password_toggle"
        app:boxBackgroundMode="none"
        android:textColorHint="#C0C3D4"
        app:hintEnabled="false"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:maxLines="1"
            android:hint=" Type your re-password"
            android:singleLine="true"
            android:background="@drawable/custom_edittext"/>






    </com.google.android.material.textfield.TextInputLayout>



    <TextView
        android:id="@+id/btn_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:gravity="center"
        android:textSize="18sp"
        android:layout_marginBottom="10dp"
        android:textColor="#008A42"/>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_register_log"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/registration"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_submit"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="12dp"
        android:background="@drawable/button_edittext"/>



    <TextView
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/confirm"
        android:gravity="center"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="12dp"
        app:layout_constraintVertical_bias="0.955"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:backgroundTint="#008A42"
        android:background="@drawable/button_edittext"/>









</androidx.constraintlayout.widget.ConstraintLayout>