<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:isScrollContainer="true"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".fragment.RegistrationFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hamkor"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/wertytr"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_margin="5dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_you_ve_been_missed"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="#747C88"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        tools:ignore="HardcodedText,SpUsage" />

    <EditText
        android:id="@+id/edt_name"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:inputType="text"
        android:hint="@string/type_your_username"
        android:padding="10dp"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:background="@drawable/custom_edittext"
        android:layout_margin="10dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        tools:ignore="HardcodedText,SpUsage" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:inputType="text"
        android:hint="@string/type_your_email"
        android:padding="10dp"
        android:maxLines="1"
        android:layout_marginStart="10dp"
        android:background="@drawable/custom_edittext"
        android:layout_margin="10dp"
        tools:ignore="TextFields" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        tools:ignore="HardcodedText,SpUsage" />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            app:boxStrokeWidth="0dp"
            app:hintEnabled="false"
            app:boxStrokeWidthFocused="0dp"
            app:endIconMode="password_toggle"
            android:textColorHint="#C0C3D4"
            app:hintAnimationEnabled="false"

            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:maxLines="1"
                android:singleLine="true"
                android:hint="Type your password"
                android:padding="10dp"
                android:background="@drawable/custom_edittext"/>






        </com.google.android.material.textfield.TextInputLayout>


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Confirm password"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:layout_marginStart="12dp"
        tools:ignore="HardcodedText,SpUsage" />



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:boxBackgroundMode="outline"
            app:hintEnabled="false"
            app:endIconMode="password_toggle"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_margin="10dp"
                android:maxLines="1"
                app:hintEnabled="false"
                android:singleLine="true"
                android:textColorHint="#C0C3D4"
                android:hint="Type your re-password"
                android:padding="10dp"
                android:background="@drawable/custom_edittext"
                tools:ignore="HardcodedText" />







        </com.google.android.material.textfield.TextInputLayout>






        <TextView
            android:id="@+id/id_login"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/login"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:background="@drawable/button_edittext"/>



    <TextView
        android:id="@+id/btn_next"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:backgroundTint="#008A42"
        android:background="@drawable/button_edittext"/>





    </LinearLayout>







</ScrollView>



