<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragment.ConfirmationFragment">



    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">




    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/hamkor"
        android:layout_gravity="center"
        android:layout_margin="20dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirmation"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        tools:ignore="HardcodedText" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/please_fill_the_code"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textColor="#747C88"
        android:textSize="18sp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:gravity="center"
        >
        <EditText
            android:id="@+id/edt_number1"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"
            android:background="@drawable/number_edit"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/edt_number2"
            android:layout_width="60dp"
            android:layout_margin="5dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"

            android:layout_height="70dp"
            android:background="@drawable/number_edit"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edt_number3"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"

            android:background="@drawable/number_edit"
            android:textColorHint="@color/black"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edt_number4"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:background="@drawable/number_edit"

            android:layout_margin="5dp"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"

            android:textColorHint="@color/black"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"/>
        <EditText
            android:id="@+id/edt_number5"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:layout_margin="5dp"
            android:background="@drawable/number_edit"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="number"
            android:maxLength="1"

            android:textColorHint="@color/black"
            android:gravity="center"
            android:textSize="25sp"
            android:textStyle="bold"/>





        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        >
        <TextView
            android:id="@+id/id_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#008A42"/>

        <TextView
            android:padding="5dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/_00_55"
            android:textSize="18sp"
            android:textColor="#008A42"/>



    </LinearLayout>




    </LinearLayout>







    <TextView
        android:id="@+id/btn_register_confrim"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/registration"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/btn_submit12"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_margin="12dp"
        android:background="@drawable/button_edittext"/>



    <TextView
        android:id="@+id/btn_submit12"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:text="@string/confirm"
        android:gravity="center"
        android:ems="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="12dp"
        app:layout_constraintVertical_bias="0.955"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:padding="10dp"
        android:backgroundTint="#008A42"
        android:background="@drawable/button_edittext"/>











</androidx.constraintlayout.widget.ConstraintLayout>